[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt_translate"
dynamic = ["version"]
description = "A tool to translate markdown files using GPT-4"
readme = "README.md" # Assuming you have a README.md file
requires-python = ">=3.9"
authors = [{name = "Thomas Capelle", email = "tcapelle@pm.me"}]
license = {file = "LICENSE"} # Assuming you have a LICENSE file
keywords = ["artificial intelligence", "generative models", "natural language processing", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "rich>=13.0",
    "openai>=1.0",
    "litellm>1.50",
    "tiktoken>=0.5",
    "fastcore>=1.5.29",
    "weave>=0.50.3",
    "simple_parsing>=0.1.5",
]

[project.urls]
homepage = "https://github.com/tcapelle/gpt_translate"

[project.scripts]
"gpt_translate.file" = "gpt_translate.cli:translate_file"
"gpt_translate.files" = "gpt_translate.cli:translate_files"
"gpt_translate.folder" = "gpt_translate.cli:translate_folder"
"gpt_translate.copy_images" = "gpt_translate.cli:copy_images"
"gpt_translate.new_files" = "gpt_translate.cli:new_files"
"gpt_translate.eval" = "gpt_translate.cli:eval"


[tool.hatch.version]
path = "src/gpt_translate/version.py" 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
